# Just-Solo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  lyric_client_test.html  package.ps1  performance-report.html  run.ps1  setup.iss  安装说明.txt
.trae/rules/: git-commit-message.md
cmake/: GenerateVersion.ps1
docs/: API.md  Just-Solo-LyricServer-Protocol.md  Just-Solo-LyricServer.md  LyricServer-API.md
resources/: app.rc
src/: main.cpp
src/core/: FolderSyncManager.cpp  FolderSyncManager.h  HotkeyManager.cpp  HotkeyManager.h  MetadataReader.cpp  MetadataReader.h  MusicManager.cpp  MusicManager.h  SMTCManager.cpp  SMTCManager.h
src/qml/: main.qml
src/qml/components/: MusicListView.qml  NavItem.qml  SongRow.qml  SubNavItem.qml
src/qml/views/: CustomPlaylistPage.qml  FavoritePage.qml  HistoryPage.qml  HomePage.qml  PlayerDetailPage.qml  PlaylistPage.qml  SettingsPage.qml
src/services/: LyricServer.cpp  LyricServer.h
